--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ numpy==1.19.5
 scikit-learn==0.24.2
 scipy==1.5.4
 sklearn==0.0
+pandas==1.2.5
+seaborn==0.11.1
 threadpoolctl==2.1.0
 typing-extensions==3.10.0.0
 Werkzeug==2.0.1
